--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: PixSim
-Title: Large-scale high-resolution forest simulations.
+Title: Large-scale high-resolution forest simulations
 Version: 0.0.0.9000
 Authors@R: 
     person("Nicolas", "Cattaneo", , "nicolas.cattaneo@nibio.no", role = c("aut", "cre"),
@@ -7,9 +7,11 @@ Authors@R:
 Description: Perform large-scale high-resolution forest growth simulations.
 License: GPL (>= 3)
 Encoding: UTF-8
-LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     data.table,
     fst
+Depends: 
+    R (>= 2.10)
+LazyData: true
