document SetAside function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(GrowthModels)
 export(PixSim)
 export(PostRegFunction)
 export(RegFunction)
+export(SetAside)
 export(raster2pixeltable)
 export(read_SI_changes)
 importFrom(data.table,":=")
