check SIchange function documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(GrowthModels)
 export(PixSim)
 export(PostRegFunction)
 export(RegFunction)
+export(SIchange)
 export(SetAside)
 export(raster4pixeltable)
 export(read_SI_changes)
